addresses vh issue on mobile

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,20 @@
+:root {
+  --vh: 1vh;
+  --header-height: calc(var(--vh, 1vh) * 7);
+  --bottom-bar-height: calc(var(--vh, 1vh) * 7);
+
+  --mastermind-bg-color: rgb(77, 77, 77);
+  --mastermind-fg-color: rgb(243, 243, 243);
+  --mastermind-accent-color: #4e8d50;
+
+  --tictactoe-bg-color: rgb(255, 255, 255);
+  --tictactoe-fg-color: #3498db;
+  --tictactoe-accent-color: #e74c3c;
+  --tictactoe-grid-color: grey;
+  --tictactoe-font: "Varela Round", serif;
+}
+
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -16,7 +33,7 @@ body {
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  height: 7vh;
+  height: var(--header-height);
   padding: 0 10px;
   background-color: #d2b48c;
   /* sand color */
@@ -33,7 +50,7 @@ body {
   position: relative;  /* change from fixed to relative */
   bottom: 0;
   width: 100vw;
-  height: 7vh;
+  height: var(--bottom-bar-height);
 }
 
 #header img {
@@ -61,16 +78,7 @@ body {
 }
 
 
-:root {
-  --mastermind-bg-color: rgb(77, 77, 77);
-  --mastermind-fg-color: rgb(243, 243, 243);
-  --mastermind-accent-color: #4e8d50;
 
-  --tictactoe-bg-color: rgb(255, 255, 255);
-  --tictactoe-fg-color: #3498db;
-  --tictactoe-accent-color: #e74c3c;
-  --tictactoe-font: "Varela Round", serif;
-}
 
 
 /************ fonts  *************/
